<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/fl_main_page_fragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_bottom_option_buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        app:layout_constraintBottom_toBottomOf="parent">

        <Button
            android:id="@+id/button_input_page"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:backgroundTint="@color/bottom_three"
            android:text="@string/button_input"
            android:textSize="12dp" />

        <Button
            android:id="@+id/button_summary_page"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:backgroundTint="@color/bottom_three"
            android:text="@string/button_summary"
            android:textSize="12dp" />

        <Button
            android:id="@+id/button_report_page"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:backgroundTint="@color/bottom_three"
            android:text="@string/button_report"
            android:textSize="12dp" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>